syntax = "proto3";

package grpc.health;

option go_package = "github.com/requiemofthesouls/svc-grpc/proto/grpc-healthcheck;grpchealthcheck";

service HealthCheck {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}


